MHB: Bug #44113 (New collection creation can fail with OCI-22303)